# OSMOzzz

./: .gitignore  CLAUDE.md  CLAUDE2.md  Cargo.toml  README.fr.md  README.md  build.sh  vercel.json
.cargo/: config.toml
.github/workflows/: release.yml
config/: default.toml
crates/osmozzz-api/: Cargo.toml
crates/osmozzz-api/src/: action_queue.rs  executor.rs  lib.rs  routes.rs  server.rs  state.rs
crates/osmozzz-api/src/db/: mod.rs  schema.rs  security.rs  token.rs
crates/osmozzz-bridge/: Cargo.toml
crates/osmozzz-bridge/src/: lib.rs  protocol.rs  server.rs
crates/osmozzz-cli/: CLAUDE.md  Cargo.toml
crates/osmozzz-cli/src/: cli.rs  config.rs  main.rs  mcp_proxy.rs  proof.rs
crates/osmozzz-cli/src/commands/: compact.rs  daemon.rs  index.rs  install.rs  mcp.rs  mod.rs  search.rs  serve.rs  status.rs  verify.rs
crates/osmozzz-cli/src/connectors/: browser.rs  calendly.rs  cloudflare.rs  discord.rs  figma.rs  gcal.rs  github.rs  gitlab.rs  gmail.rs  hubspot.rs  jira.rs  linear.rs  mod.rs  n8n.rs  notion.rs  posthog.rs  railway.rs  reddit.rs  render.rs  resend.rs  sentry.rs  shopify.rs  slack.rs  stripe.rs  supabase.rs  twilio.rs  vercel.rs
crates/osmozzz-cli/src/mcp_proxy/: cloudflare.rs  github.rs  gitlab.rs  jira.rs  linear.rs  mod.rs  notion.rs  sentry.rs  slack.rs  supabase.rs
crates/osmozzz-core/: Cargo.toml
crates/osmozzz-core/src/: action.rs  error.rs  lib.rs  traits.rs  types.rs
crates/osmozzz-core/src/filter/: config.rs  engine.rs  mod.rs
crates/osmozzz-core/src/filter/rules/: api_keys.rs  connector_tokens.rs  credit_card.rs  email.rs  iban.rs  known_secrets.rs  mod.rs  phone.rs
crates/osmozzz-embedder/: CLAUDE.md  Cargo.toml
crates/osmozzz-embedder/src/: blacklist.rs  embedder.rs  lib.rs  store.rs  vault.rs
crates/osmozzz-harvester/: CLAUDE.md  Cargo.toml
crates/osmozzz-harvester/src/: CLAUDE.md  airtable.rs  arc.rs  calendar.rs  checksum.rs  chrome.rs  contacts.rs  files.rs  github.rs  gitlab.rs  gmail.rs  imessage.rs  jira.rs  lib.rs  linear.rs  notes.rs  notion.rs  obsidian.rs  safari.rs  slack.rs  splitter.rs  terminal.rs  todoist.rs  trello.rs  watcher.rs
crates/osmozzz-p2p/: Cargo.toml
crates/osmozzz-p2p/src/: discovery.rs  history.rs  identity.rs  lib.rs  node.rs  permissions.rs  protocol.rs  store.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: ActionFlux.tsx  BlacklistPanel.tsx  PrivacyPanel.tsx
dashboard/src/lib/: assets.ts  highlight.tsx
dashboard/src/pages/: ActionsPage.tsx  ConfigPage.tsx  NetworkPage.tsx  RecentPage.tsx  SearchPage.tsx  StatusPage.tsx
docs/: docs.css  features.html  i18n.js  index.html  lang.js  mac.html  style.css  windows.html
landing/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
landing/app/: CompareSnake.tsx  HeroBlock.tsx  LoupeAnimet.js  ShieldRadar.js  layout.tsx  page.tsx  registry.tsx  shield3d.js
landing/app/docs/: page.tsx
landing/assets/: shield_web.glb
landing/context/: LanguageContext.tsx
landing/data/: translations.ts
landing/public/assets/: shield_web.glb
scripts/: download-model.sh
scripts/pkg/: postinstall
scripts/windows/: installer.nsi
