[workspace]
members = [
    "crates/osmozzz-core",
    "crates/osmozzz-harvester",
    "crates/osmozzz-embedder",
    "crates/osmozzz-bridge",
    "crates/osmozzz-cli",
    "crates/osmozzz-api",
    "crates/osmozzz-p2p",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OSMOzzz"]
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filter
regex = "1"

# P2P
iroh = "0.96"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
mdns-sd = "0.11"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
base64 = "0.22"

# Harvester
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
pdf-extract = "0.7"
notify = "6"
imap = "2"
native-tls = "0.2"
mailparse = "0.14"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"

# Embedder
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
ndarray = "0.16"
futures = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
shellexpand = "3"

# Core
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
