[package]
name = "osmozzz-api"
version.workspace = true
edition.workspace = true

[dependencies]
osmozzz-core = { path = "../osmozzz-core" }
osmozzz-embedder = { path = "../osmozzz-embedder" }
osmozzz-harvester = { path = "../osmozzz-harvester" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
include_dir = "0.7"
toml = "0.8"
dirs-next = { workspace = true }
