[package]
name = "osmozzz-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
osmozzz-core = { path = "../osmozzz-core" }
osmozzz-embedder = { path = "../osmozzz-embedder" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
