[package]
name = "osmozzz-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "osmozzz"
path = "src/main.rs"

[dependencies]
osmozzz-core = { path = "../osmozzz-core" }
osmozzz-harvester = { path = "../osmozzz-harvester" }
osmozzz-embedder = { path = "../osmozzz-embedder" }
osmozzz-bridge = { path = "../osmozzz-bridge" }
osmozzz-api = { path = "../osmozzz-api" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dirs-next = { workspace = true }
shellexpand = { workspace = true }
pdf-extract = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
