[package]
name = "osmozzz-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
dirs-next = { workspace = true }
