[package]
name = "osmozzz-embedder"
version.workspace = true
edition.workspace = true

[dependencies]
osmozzz-core = { path = "../osmozzz-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
dirs-next = { workspace = true }
